# power-bi

./: .env  Adventure Works.py  pyproject.toml  requirements.txt
Adventure Works/: Adventure Works V2.pbix  Adventure Works.pbix
csv/: Date.csv  Reseller.csv
layouts/: Adventure Works.grid.json
