[project]
name = "power-bi"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "duckdb>=1.2.2",
    "ibis-framework[mssql,postgres]>=10.4.0",
    "marimo[lsp]>=0.13.0",
    "matplotlib>=3.10.1",
    "psycopg[binary]>=3.2.9",
    "pyfuze>=0.5.2",
]
[tool.marimo.experimental]
lsp = true

# Language server configuration
[tool.marimo.language_servers.pylsp]
enabled = true               # Enable/disable the Python language server
enable_mypy = true           # Type checking with mypy (enabled by default, if installed)
enable_ruff = true           # Linting with ruff (enabled by default, if installed)
enable_flake8 = false        # Linting with flake8
enable_pydocstyle = false    # Check docstring style
enable_pylint = false        # Linting with pylint
enable_pyflakes = false      # Syntax checking with pyflakes

# Diagnostics configuration
[tool.marimo.diagnostics]
enabled = true               # Show diagnostics in the editor
